<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/wizard_card_height"
    tools:context="cx.ring.account.AccountWizardActivity"
    android:clipToPadding="false"
    android:clipChildren="false" >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/wizard_card_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:padding="@dimen/wizard_card_padding">

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/status"
                android:layout_alignParentTop="true"
                android:layout_marginRight="4dp"
                android:textStyle="bold"
                android:text="@string/wizard_password_info"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/wizard_status_optional"
                android:textSize="@dimen/wizard_text_size"
                android:textStyle="bold"
                android:textColor="#ff1f62"
                android:background="@drawable/background_status"
                android:padding="6dp"/>

            <Switch
                android:id="@+id/ring_password_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/info"
                android:checked="false"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/wizard_password_switch"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_txt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_below="@id/ring_password_switch"
                app:passwordToggleEnabled="true"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ring_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/prompt_new_password"
                    android:inputType="textPassword"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/baseline_lock_18"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ring_password_repeat_txt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_below="@id/password_txt_box"
                app:passwordToggleEnabled="true"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ring_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:inputType="textPassword"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/baseline_lock_18"
                    android:hint="@string/prompt_new_password_repeat"
                    android:imeActionLabel="@string/action_create_short"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ring_password_repeat_txt_box"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_above="@id/create_account"
                android:textStyle="bold"
                android:text="@string/wizard_password_warning"
                android:visibility="gone"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account"
                style="@style/WizardButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/wizard_password_button"
                android:theme="@style/ButtonColoredInverse"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>