...
                    app:srcCompat="@drawable/baseline_cancel_24"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
...
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next_create_account"
                    style="@style/WizardButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard_profile_button" />

                <com.google.android.material.button.MaterialButton
...
