...
                    android:layout_height="match_parent"
                    android:layout_below="@id/ring_add_account"
                    android:background="@color/color_primary_light"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/ring_create_btn"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/account_new_button"
                        android:textColor="@color/text_color_primary_dark" />
...
                        android:id="@+id/etSipPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:hint="@string/prompt_password"
...
