...
You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="@drawable/background_item_smartlist"
    android:descendantFocusability="blocksDescendants"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/photo">

        <TextView
            android:id="@+id/conv_participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/conv_last_time"
            android:ellipsize="marquee"
            android:gravity="start"
...
